test/org/midica/testfiles/failing/zero-for-chord.midica
INCLUDE inc/instruments.midica

0 c/d -
